--- a/vue/package.json
+++ b/vue/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-papa-parse": "^1.3.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
