--- a/vue/package.json
+++ b/vue/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.10",
     "vue-papa-parse": "^1.3.0",
     "vue-router": "^3.0.3",
+    "vue-sidebar-menu": "^4.6.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
