--- a/vue/package.json
+++ b/vue/package.json
@@ -11,9 +11,16 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
+    "chartkick": "^3.2.1",
     "core-js": "^2.6.5",
+    "echarts": "^4.8.0",
+    "hchs-vue-charts": "^1.2.8",
     "jquery-csv": "^1.0.11",
     "vue": "^2.6.10",
+    "vue-chartjs": "^3.5.0",
+    "vue-chartkick": "^0.6.1",
+    "vue-echarts": "^5.0.0-beta.0",
     "vue-papa-parse": "^1.3.0",
     "vue-router": "^3.0.3",
     "vue-sidebar-menu": "^4.6.2",
